# adaptive-k-tails-automata

./: .gitignore  README.md  bcr.csv  bcr_analysis.csv  eval.py  extra_dataset_results.csv  final_bcr_results.csv  final_evaluation.csv  nn.csv  nn_analysis.csv  pyproject.toml  pytest.ini  states.csv  states_analysis.csv  stats_analysis.R  time.csv  time_analysis.csv
output/: k_vectors.csv  test_automaton_1.dot  test_automaton_2.dot  test_automaton_3.dot  test_automaton_5220.dot
src/: A_ktail_V2_2_FromKtailV5_8_GlobalMergeV6_Nstrict_singleInfer.py  A_ktail_V2_4_FromKtailV5_8_GlobalMergeV7_Nstrict_Mute_singleInferV2.py  A_ktail_V3.1_FromKtailV5_8_GlobalMergeV7_Nstrict_Mute_singleInferV2_optimalKvecV2_inferPiplineV1_timerV1_kUpper2_DoSingleInfer.py  A_ktail_V3_0_FromKtailV5_8_GlobalMergeV7_Nstrict_Mute_singleInferV2_optimalKvecV2_inferPiplineV1_timerV1_kUpper2_Translated.py  MLP_multitask.py  MLP_multitask_distance_aware.py  V1_adaptive_k.py  V2_adaptiv_k_no_next_state_when_comparing_tails.py  V3_adaptiv_k_no_next_state_when_comparing_tails_recursiveCheckingMerge.py  V4_adaptiv_k_no_next_state_when_comparing_tails_recursiveCheckingMerge_noStrictMode.py  V5_adaptiv_k_no_next_state_when_comparing_tails_recursiveCheckingMerge_noStrictMode_cursor-code.py  V6.2_cursor-code_-k-tail-standard.py  V6.3_cursor-code_-k-tail(accepted_matters)-adaptive-outgoing.py  V6.4_cursor-code_-k-tail(accepted_matters)（negative-matters）.py  V6_cursor-code_-k-tail(accepted_matters) .py  V7_cursor-code_-k-tail(accepted_matters) (negtive-matters).py  automaton_10_2_5_0~0.txt_ATM_from_NN_BCR.txt  (+23 more)
(+87 files in other folders)
