[project]
name = "adaptive-k-tails-automata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "pytest>=9.0.2",
    "pytest-pikachu>=1.0.0",
    "pytest-random-order>=1.2.0",
    "pytest-repeat>=0.9.4",
    "pytest-xdist>=3.8.0",
]
